# FastAPILearning

./: .gitignore  alembic.ini  docker-compose.redis.yaml  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 1047d4d3abf1_two_migration.py  506970d493fd_first_migration.py  6e1608da99ee_.py  a63e4358d31a_new_migrations.py  b5298298bb61_new_migrations.py  d2449632df7b_new_migrations.py
dao/: base.py
migration/: env.py
migration/versions/: 4e60130f1029_first_commit.py  992121bbf558_first_coomit.py  a63e4358d31a_new_migrations.py  ae9d15bf60e8_initial_migration.py  c3195a6fa518_two_migration.py
src/: __init__.py  application.py  db.py  main.py
src/Author/: author_router.py  models.py  router.py  schemas_author.py  session.py  session_author.py
src/Student/: models.py  router.py  schemas.py  schemas_student.py  session.py  session_student.py  student_router.py
src/User/: models.py  router.py  schemas.py  sessions.py  user_router.py
src/client/: bio_author_client.py  bio_student_client.py  bio_user_client.py
src/core/: config.py  config_logging.py  db.py  dependencies.py  enums.py  redis.py
src/dao/: base.py  models.py  schemas.py  service.py
src/exception/: base.py  business.py  client_exception.py  exception_handlers.py  server_exception.py
src/healthcheck/: router.py
src/models/: author.py  author_models.py  books.py  books_models.py  courses.py  courses_model.py  models.py  profile.py  profile_models.py  rb.py  schemas.py  sessions.py  student.py  student_models.py  user.py  user_models.py
src/repositories/: author.py  course.py  students.py  user.py
src/schemas/: author.py  author_schemas.py  book.py  book_schemas.py  courses.py  courses_schemas.py  exception.py  (+7 more)
test/: conftest.py
(+54 files in other folders)
