[project]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Grinch",email = "magw710i@mail.ru"}
]
requires-python = "3.11.9"
dependencies = [
    "fastapi>=0.117.1,<0.118.0",
    "uvicorn>=0.36.0,<0.37.0",
    "alembic>=1.16.5,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "pydantic[email]>=2.11.10,<3.0.0",
    "ujson>=5.11.0,<6.0.0",
    "redis>=7.3.0,<8.0.0",
    "httpx>=0.28.1,<0.29.0",
    "redress>=1.2.0,<2.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "testcontainers>=4.14.2,<5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
async_default_test_loop_scope = "session"
testpaths = ["test"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*",
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
